# mingw-org-tools

./: .gitignore  .gitmodules  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure.ac
doc/: README-mingw.org-tools
gendef/: configure.ac  gendef.c
gendef/src/: gendef.c
genidl/: configure.ac  genidl_config.c  genidl_dumpidl.c
widl/: Makefile.am  configure.ac  hash.c  typegen.c  typelib.c  write_msft.c
widl/wpp/: ppl.l  ppl.yy.c
