#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([mingw.org-tools], [1.0], [mingw-users@lists.sourceforge.net])
AC_CONFIG_AUX_DIR([build-aux])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_CONFIG_SUBDIRS([gendef
                   genidl
                   widl])
AC_OUTPUT
